db/pg.yaml
#apiVersion: v1 
#kind: Namespace 
#metadata: 
#  name: db

---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: pg-pvc
#  namespace: db
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 5Gi
#  storageClassName: local-path

---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: db
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
#  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg
  namespace: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: cgr.dev/chainguard/postgres:latest
          args:
            - "-c"
            - "max_connections=200"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
