db/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
---
#apiVersion: v1
#kind: Service
#metadata:
  #name: pgadmin-service
  #namespace: db
#spec:
  #selector:
    #app: pgadmin
  #ports:
    #- protocol: TCP
      #port: 80
      #targetPort: 80

apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: db
spec:
  type: LoadBalancer
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 8283
      targetPort: 80
